<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:viewBindingIgnore="false"
    tools:context=".presentation.fragments.Buildfragment">

    <View
        android:id="@+id/rectangle"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        android:background="#3E000000"
        tools:visibility="visible"
        android:visibility="gone" />

    <TextView
        android:id="@+id/textViewGraphicsCards"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_graphics_cards"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rectangle"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp" />

    <Spinner
        android:id="@+id/spinnerGraphicsCards"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minWidth="200dp"
        android:minHeight="48dp"
        android:background="@drawable/spinner_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewGraphicsCards"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="4dp" />

    <!-- Материнские платы -->
    <TextView
        android:id="@+id/textViewMotherboards"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_motherboards"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinnerGraphicsCards"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp" />

    <Spinner
        android:id="@+id/spinnerMotherboards"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minWidth="200dp"
        android:minHeight="48dp"
        android:background="@drawable/spinner_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewMotherboards"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="4dp" />

    <!-- Процессоры -->
    <TextView
        android:id="@+id/textViewProcessors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_processors"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinnerMotherboards"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp" />

    <Spinner
        android:id="@+id/spinnerProcessors"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minWidth="200dp"
        android:minHeight="48dp"
        android:background="@drawable/spinner_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewProcessors"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="4dp" />

    <!-- Оперативная память (RAM) -->
    <TextView
        android:id="@+id/textViewRAM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_ram"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinnerProcessors"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp" />

    <Spinner
        android:id="@+id/spinnerRAM"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minWidth="200dp"
        android:minHeight="48dp"
        android:background="@drawable/spinner_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewRAM"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="4dp" />

    <!-- SSD -->
    <TextView
        android:id="@+id/textViewSSD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_ssd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinnerRAM"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp" />

    <Spinner
        android:id="@+id/spinnerSSD"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minWidth="200dp"
        android:minHeight="48dp"
        android:background="@drawable/spinner_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewSSD"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="4dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewTotalPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintTop_toBottomOf="@id/spinnerSSD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp">

        <!-- Карточка с суммой -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Сумма:"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewTotalPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <!-- Кнопка "Сохранить в базу данных" -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSaveToDatabase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Сохранить в базу данных"
        app:layout_constraintTop_toBottomOf="@id/cardViewTotalPrice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="4dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
